--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="water">Вода</string>
     <string name="sync_label">Обновить</string>
+    <string name="edit">Редактировать</string>
 </resources>
